# npkill-rs

./: Cargo.toml  LICENSE  README.md
src/: args.rs  dirs.rs  error.rs  events.rs  main.rs  state.rs  ui.rs
src/utils/: direntry_froms.rs
